# aitalk

./: .gitignore  00_AI辅助学习架构.md  01_pandas入门_生活例子.ipynb  01_pandas入门_生活例子.py  02_debug练习_找bug.py  02_debug练习_找bug_答案.py  02_debug练习_找bug_纯净版.py  03_flask应用_图书管理.ipynb  03_flask应用_图书管理.py  04_R_dplyr管道操作.R  05_R_flextable条件格式.R  05_sales_basic.docx  05_sales_conditional.docx  05_sales_oneliner.docx  06_Quarto报告模板.html  06_Quarto报告模板.qmd  06_R_Markdown报告模板.Rmd  06_R_Markdown报告模板.html  06_R_Markdown报告模板.tex  07_Rust_所有权_生活类比.rs  08_Rust_模式匹配练习.rs  10_业务实战_月度分析报告.ipynb  10_业务实战_月度分析报告.py  AI赋能未来：从业务革新到编程学习的全面进阶.pptx  README.md  ai_tool_guide.md  prompt_examples.md
06_Quarto报告模板_files/libs/quarto-html/: quarto-syntax-highlighting-7fc0177ccab6ff8a0b751889bd072cc9.css
09_Rust_Tauri应用/: Cargo.toml  index.html
09_Rust_Tauri应用/src/: main.rs
smartboard/: $null  .gitignore  Makefile  Makefile_win  index.html  package-lock.json  package.json  package.json.bak  vite.config.ts  vite.save.config.ts
smartboard/dist-standalone/: renderer.js  sample-data.csv
smartboard/docs/: 2026-06-23-多语言国际化工作日志.md  2026-06-24-save函数重构记录.md  2026-06-27-多表关联与数据修复工作日志.md  2026-06-27-纯TS到Rust融合架构提升分析.md  2026-06-29-工作日志.md  2026-06-30-工作日志.md  computed-col-filter-test-guide.md  formula-engine-guide.md  i18n-多语言构建培训文档.md  introduce.md  phase2-canvas-layout.md  sleek-tor-elk.md  sleek_check.md  smartboard-性能修复建议.md  基本图表优化工作计划.md  多表上传-Rust后端融合-工作计划.md  多表上传及关联表格ui的建议.md  数据列自动分类规则.md  数据多方式接入工作计划.html  数据多方式接入工作计划.md  数据定义流转说明.md  服务器版本的思考.md  筛选条件语法培训手册.md  筛选条件速查表.md  表格加载库的替换，提升显示效率.md  计算列占比逻辑说明.md  计算指标体系设计方案.md  高级分析功能讲解.md  高级功能升级计划.md
smartboard/src/: App.vue  main.ts
smartboard/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
smartboard/src-tauri/capabilities/: default.json
smartboard/src-tauri/icons/: icon.icns
smartboard/src-tauri/src/: df_util.rs  lib.rs  main.rs  state.rs  types.rs
smartboard/src-tauri/src/commands/: analysis.rs  compute.rs  database.rs  datasource.rs  excel_selection.rs  expr_parser.rs  feishu.rs  groupby.rs  loader.rs  merge.rs  mod.rs  server.rs
smartboard/src/assets/: main.css
smartboard/src/composables/: use-chart-download.ts  use-chart-ready.ts  use-chart-resize.ts  use-lazy-render.ts  use-rust-bridge.ts  use-share-server.ts  use-theme.ts  (+1 more)
smartboard/templates/: result_template.html
smartboard/test_data/: 26-06-24.html  computed_col_filter_test 分析看板.json  computed_col_filter_test.csv  config.json  export.csv  generate_test_files.py  output 分析看板_2026-06-28.csv  output.csv  sample-data 分析看板.json  sample-data 分析看板_2026-06-29.html  sample-data 分析看板_2026-06-30.html  sample-data 分析看板_2026-07-02.html  sample-data.json  sample-data.parquet  sample-data_TEST.json  sample-database.db  smartboard-sample-data 分析看板_2026-06-25.html  smartboard-sample-data.csv  time_analysis_sample Dashboard_2026-06-25.html  time_analysis_sample 分析看板_2026-06-23.html  time_analysis_sample 分析看板_2026-06-24.csv  time_analysis_sample 分析看板_2026-06-24.html  time_analysis_sample 分析看板_2026-06-25.html  time_analysis_sample 分析看板_2026-06-28.html  time_analysis_sample 分析看板_2026-07-01.html  time_analysis_sample.csv  分析看板_2026-06-28.html  外委支出表 分析看板_2026-07-01.html  外委支出表.csv  工作日志与工时统计表_ETL_link Dashboard_2026-06-27.html  支出.csv  收入-支出关联看板.json  收入合同表.csv  收入类台账 分析看板_2026-06-26.html  收入类台账关联分析看板.json  设计业务收入、支出合同-项管(1) 分析看板_2026-06-25.html  设计业务收入、支出合同-项管(1).xlsx  设计业务收入分析看板.json  设计业务收入分析看板_2026-06-25.html  设计业务收入合同-分析看板_2026-06-25.html  (+3 more)
(+46 files in other folders)
