[package]
name = "memo-app"
version = "0.1.0"
description = "📝 备忘录桌面应用 — AI 辅助生成的 Tauri 项目"
authors = ["AI Assistant"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
