[package]
name = "smartboard"
version = "0.1.0"
description = "SmartBoard — 智能数据分析看板"
authors = ["SmartBoard Team"]
edition = "2021"

[lib]
name = "smartboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
