[package]
name = "smartboard"
version = "0.1.0"
description = "SmartBoard — 智能数据分析看板"
authors = ["SmartBoard Team"]
edition = "2021"

[lib]
name = "smartboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Tauri ──
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# ── Data processing: Polars ──
polars = { version = "0.53", features = [
    "lazy",
    "csv",
    "parquet",
    "strings",
    "dtype-date",
    "dtype-datetime",
    "rows",
    "serde",
] }
polars-ops = { version = "0.53" }

# ── Serialization ──
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Error handling ──
anyhow = "1"

# ── Excel I/O ──
calamine = { version = "0.26", features = ["dates"] }

# ── Utilities ──
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
lazy_static = "1"
chrono = "0.4"
regex = "1"
