[package]
name = "smartboard"
version = "0.1.0"
description = "SmartBoard — 智能数据分析看板"
authors = ["SmartBoard Team"]
edition = "2021"

[lib]
name = "smartboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Tauri ──
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# ── Data processing: Polars ──
polars = { version = "0.54", features = [
    "lazy",
    "csv",
    "parquet",
    "strings",
    "regex",
    "dtype-date",
    "dtype-datetime",
    "rows",
    "serde",
] }
polars-ops = { version = "0.54" }

# ── Serialization ──
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Error handling ──
anyhow = "1"

# ── Excel I/O ──
calamine = { version = "0.26", features = ["dates"] }

# ── HTTP client (for URL fetch) ──
reqwest = { version = "0.12", features = ["rustls-tls"] }

# ── SQLite (for database import) ──
rusqlite = { version = "0.32", features = ["bundled"] }

# ── Utilities ──
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
chrono = "0.4"

# ── SQL databases (desktop only, not available on iOS) ──
[target.'cfg(not(target_os = "ios"))'.dependencies]
mysql = "25"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
